# rust_prompt_manager

./: README.md  package-lock.json  package.json
src/: index.html  main.js  popup.html  popup.js  styles.css
src-tauri/: Cargo.toml  build_error_2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib.rs.new
